# usbmux_tool

./: .gitignore  CMakeLists.txt  README.md
Docs/: USERSPACE_DRIVER.md
docs/: USERSPACE_DRIVER.md
include/ch32v208_mux/: ble.h  device.h  proto.h  uart.h
module/: REUSE_ASSESSMENT.md
src/: device.c
tests/: test_proto.c
tools/: ch32v208-mux-cli.c
udev/: 60-ch32v208-mux.rules
userspace/: .gitignore  CMakeLists.txt
userspace/include/ch32v208_mux/: proto.h
userspace/src/: ble.c  proto.c  uart.c
userspace/tests/: test_proto.c
userspace/tools/: ch32v208-mux-cli.c
